objects/ortoo_qra__Unreviewed_Object_Wrapper__c.object
<CustomObject>
    <description>Custom object for Event and Task</description>
    <fields>
        <fullName>ortoo_qra__EventSubtype__c</fullName>
        <label>EventSubtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Object_Wrapper_Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Q_assign_Last_Assigned_Date__c</fullName>
        <label>Q_assign_Last_Assigned_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__ShownAs__c</fullName>
        <label>ShownAs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>QA Unreviewed_Object_Wrapper</label>
    <nameField>
        <label>Unreviewed  Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Unreviewed Object Wrappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>